Add netgo and nodynamic build tags

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,7 +18,8 @@ ARG TARGETOS TARGETARCH
 RUN CGO_ENABLED=0 \
     GOOS=$TARGETOS \
     GOARCH=$TARGETARCH \
-    go build -trimpath -ldflags "-s -w" -tags timetzdata -o $app \
+    GOEXPERIMENT=greenteagc \
+    go build -trimpath -ldflags "-s -w" -tags "netgo nodynamic timetzdata" -o $app \
     && upx --best --lzma $app \
     && chmod 500 $app
 
