--- a/docker/Dockerfile.debug
+++ b/docker/Dockerfile.debug
@@ -15,7 +15,7 @@ ARG TARGETOS TARGETARCH
 RUN CGO_ENABLED=0 \
     GOOS=$TARGETOS \
     GOARCH=$TARGETARCH \
-    GOEXPERIMENT=greenteagc \
+    GOEXPERIMENT=goroutineleakprofile \
     go build -trimpath -tags "netgo nodynamic timetzdata" -o $app \
     && chmod 500 $app
 
